--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@react-three/drei": "^10.4.2",
+    "@react-three/fiber": "^9.2.0",
     "@supabase/supabase-js": "^2.50.2",
     "framer-motion": "^12.19.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.525.0",
     "multer": "^2.0.1",
     "next": "15.3.4",
     "pdf-parse": "^1.1.1",
@@ -22,7 +27,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-speech-recognition": "^4.0.1",
-    "sooner": "^1.1.4"
+    "sooner": "^1.1.4",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
